# skiros2

./: .gitignore  Dockerfile  Doxyfile  LICENSE.md  README.md  requirements.txt
.github/workflows/: docker-build.yml  ros-license-check.yml
skiros2/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2/cfg/: skiros_config.yaml
skiros2/env-hooks/: skiros.bash
skiros2/launch/: resource_mgr.launch  skill_mgr.launch  skiros.launch  skiros2.launch.py  task_mgr.launch  world_model_server.launch
skiros2/owl/: skiros.owl  skirosExtra.owl
skiros2/owl/IEEE-1872-2015/: RParts.owl  cora.owl  coraX.owl  readme.txt  sumo.owl
skiros2/scripts/: install_fd_task_planner.sh
skiros2/tests/: roslaunch_test.xml
skiros2_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_common/skiros2_common/core/: abstract_skill.py  discrete_reasoner.py  params.py  primitive.py  world_element.py
skiros2_common/skiros2_common/ros/: utils.py
skiros2_common/skiros2_common/tools/: decorators.py  logger.py  plugin_loader.py  time_keeper.py
skiros2_common/src/skiros2_common/: __init__.py
skiros2_common/src/skiros2_common/core/: abstract_skill.py  conditions.py  discrete_reasoner.py  params.py  primitive.py  property.py  utils.py  world_element.py
skiros2_common/src/skiros2_common/ros/: utils.py
skiros2_common/src/skiros2_common/tools/: decorators.py  dict_diff.py  id_generator.py  logger.py  plugin_loader.py  time_keeper.py
skiros2_common/src/test/: test_json_serialization.py  test_world_element.py
skiros2_common/src/test/core/: test_conditions.py  test_params.py  test_world_element.py
skiros2_common/test/: test_json_serialization.py
skiros2_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
skiros2_gui/skiros2_gui/: gui.py
skiros2_gui/skiros2_gui/core/: skiros_gui.ui  skiros_modify_object_dialog.ui  skiros_widget.py
skiros2_gui/src/skiros2_gui/: gui.py
skiros2_gui/src/skiros2_gui/core/: skiros_gui.ui  skiros_gui_add_object_dialog.ui  skiros_gui_dialog.ui  skiros_skill_info.ui  skiros_widget.py
skiros2_gui/test/: gui_test.test  pytest_runner.py
skiros2_gui/test/qt_test/: conftest.py  test_dialogs.py  test_skiros_widget.py
skiros2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg
skiros2_msgs/action/: AssignTask.action  TestAction.action
skiros2_msgs/msg/: Condition.msg  ManagerDescription.msg  Param.msg  Property.msg  Relation.msg  ResourceDescription.msg  ResourceMonitor.msg  RobotDescription.msg  SkillProgress.msg  Statement.msg  TreeProgress.msg  WmElement.msg  WmMonitor.msg
skiros2_msgs/srv/: ResourceCommand.srv  ResourceGetDescriptions.srv  ResourceSetParams.srv  SkillCommand.srv  TmSetGoals.srv  WmGet.srv  WmInitScene.srv  WmLoadAndSave.srv  WmModify.srv  WmQueryRelations.srv  WmSetRelation.srv  WoLoadAndSave.srv  WoModify.srv  WoQuery.srv
skiros2_resource/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
skiros2_resource/nodes/: resource_manager_node
skiros2_resource/src/skiros2_resource/gui/: resource_gui.py  resource_gui.ui
skiros2_resource/src/skiros2_resource/ros/: resource_layer_interface.py  resource_manager.py  resource_manager_interface.py
skiros2_skill/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_skill/nodes/: skill_manager_node
skiros2_skill/nodes/utils/: cmd
skiros2_skill/skiros2_skill/core/: skill.py  skill_instanciator.py  skill_utils.py
skiros2_skill/skiros2_skill/nodes/: skill_manager_node.py
skiros2_skill/skiros2_skill/nodes/utils/: cmd.py
skiros2_skill/skiros2_skill/ros/: discovery_interface.py  skill_layer_interface.py  skill_manager.py  skill_manager_interface.py  utils.py
skiros2_skill/src/skiros2_skill/core/: processors.py  skill.py  skill_instanciator.py  skill_utils.py  visitors.py  visitors_optimizer.py
skiros2_skill/src/skiros2_skill/ros/: discovery_interface.py  ros_skill.py  skill_layer_interface.py  skill_manager.py  skill_manager_interface.py  utils.py
skiros2_task/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_task/nodes/: task_manager_node  test_domain
skiros2_task/nodes/utils/: test_domain
skiros2_task/skiros2_task/core/: pddl_interface.py
skiros2_task/skiros2_task/nodes/: task_manager_node  task_manager_node.py
skiros2_task/skiros2_task/nodes/utils/: test_domain  test_domain.py
skiros2_task/skiros2_task/ros/: task_manager.py  task_manager_interface.py
skiros2_task/src/skiros2_task/core/: pddl_interface.py
skiros2_task/src/skiros2_task/ros/: task_manager.py  task_manager_interface.py
skiros2_world_model/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_world_model/nodes/: ontology_server_node  world_model_server_node
skiros2_world_model/nodes/utils/: edit_scene  simple_query  view_scene
skiros2_world_model/skiros2_world_model/core/: ontology_rdflib.py  world_model.py  world_model_abstract_interface.py
skiros2_world_model/skiros2_world_model/nodes/: ontology_server_node.py  world_model_server_node.py
skiros2_world_model/skiros2_world_model/nodes/utils/: edit_scene  view_scene
skiros2_world_model/skiros2_world_model/ros/: ontology_interface.py  ontology_server.py  world_model_interface.py  world_model_server.py
skiros2_world_model/src/skiros2_world_model/core/: local_world_model.py  ontology_rdflib.py  world_model.py  world_model_abstract_interface.py
skiros2_world_model/src/skiros2_world_model/ros/: ontology_interface.py  ontology_server.py  world_model_interface.py  world_model_server.py
test/skiros2_common/core/: test_property.py
