<package>
  <name>skiros2</name>
  <version>1.0.1</version>
  <description>
      Skill-based platform for ROS
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>

  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>skiros2_common</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <build_depend>skiros2_world_model</build_depend>
  <build_depend>skiros2_skill</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>xterm</run_depend>
   <export>
  </export>
</package>
