<?xml version="1.0"?>
<package format="2">
  <name>skiros2</name>
  <version>1.0.3</version>
  <description>
      Skill-based platform for ROS
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>

  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>skiros2_common</exec_depend>
  <exec_depend>skiros2_msgs</exec_depend>
  <exec_depend>skiros2_world_model</exec_depend>
  <exec_depend>skiros2_skill</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>xterm</exec_depend>


   <export>
  </export>
</package>
