<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skiros2</name>
  <version>1.0.5</version>
  <description>
      Skill-based platform for ROS
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>

  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <exec_depend>skiros2_common</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>skiros2_task</exec_depend>
  <exec_depend>skiros2_msgs</exec_depend>
  <exec_depend>skiros2_world_model</exec_depend>
  <exec_depend>skiros2_skill</exec_depend>
  <exec_depend>xterm</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>python-is-python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
