<?xml version="1.0"?>
<package>
  <name>skiros2_gui</name>
  <version>1.0.5</version>
  <description>SkiROS GUI</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>LGPL-3.0-or-later</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_world_model</run_depend>
  <run_depend>skiros2_skill</run_depend>

  <!-- GUI -->
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <!--<test_depend>skiros2_test_lib</test_depend>-->
  <test_depend>rostest</test_depend>
  <test_depend>python-pytest</test_depend>
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
