<package>
  <name>skiros2_msgs</name>
  <version>0.0.1</version>
  <description>
	The skiros message package containes specific messages 
        definitions. This package is part of the skiros2 system.
  </description>
  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
