<?xml version="1.0"?>
<package>
  <name>skiros2_task</name>
  <version>0.0.2</version>
  <description>SkiROS for python</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_world_model</run_depend>
  <run_depend>skiros2_skill</run_depend>
</package>
